--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = ["dash","pandas","dash-bootstrap-components"]
+dependencies = [
+    "dash",
+    "pandas",
+    "dash-bootstrap-components",
+    "plotly>=6.3.1",
+]
