--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,4 +10,6 @@ dependencies = [
     "dash-bootstrap-components",
     "plotly>=6.3.1",
     "gunicorn",
+    "python-dotenv>=1.1.1",
+    "requests>=2.32.5",
 ]
